load("@rules_jvm_external//:defs.bzl", "artifact")
load("//java:defs.bzl", "java_library")

AUGMENTER_SRCS = [
    "BiDiProvider.java",
]

java_library(
    name = "augmenter",
    srcs = AUGMENTER_SRCS,
    visibility = [
        "//java/src/org/openqa/selenium/remote:__pkg__",
    ],
    deps = [
        ":bidi",
        "//java:auto-service",
        "//java/src/org/openqa/selenium:core",
        "//java/src/org/openqa/selenium/remote:api",
        "//java/src/org/openqa/selenium/remote/http",
    ],
)

java_library(
    name = "bidi",
    srcs = glob(
        [
            "*.java",
            "log/*.java",
            "browsingcontext/*.java",
        ],
        exclude = AUGMENTER_SRCS,
    ),
    visibility = [
        "//java/src/org/openqa/selenium/bidi:__subpackages__",
        "//java/src/org/openqa/selenium/firefox:__subpackages__",
        "//java/src/org/openqa/selenium/remote:__pkg__",
        "//java/test/org/openqa/selenium/bidi:__subpackages__",
        "//java/test/org/openqa/selenium/grid:__subpackages__",
    ],
    deps = [
        "//java/src/org/openqa/selenium:core",
        "//java/src/org/openqa/selenium/json",
        "//java/src/org/openqa/selenium/remote/http",
        artifact("com.google.guava:guava"),
        artifact("software.amazon.awssdk:s3"),
        artifact("software.amazon.awssdk:regions"),
        artifact("software.amazon.awssdk:auth"),
        artifact("io.fabric8:kubernetes-client"),
        artifact("io.fabric8:kubernetes-client-api"),
        artifact("io.fabric8:kubernetes-model-core"),
        artifact("io.fabric8:kubernetes-model-metrics"),
        artifact("software.amazon.awssdk:sdk-core"),
        artifact("com.azure:azure-storage-blob"),
        artifact("com.azure:azure-identity"),
    ],
)
